--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
 <body>
   <!-- Topline -->
   <div class="topline">
-    The UK Maths Tutor, Supporting learners from KS1 to KS3.
+    The UK Maths Tutor, Nurturing Mathematical Wizardry.
   </div>
 
   <main>
     <h1 class="logo"><span class="x-italic">x</span>tutor</h1>
-    <p class="tagline">Learning begins with <span class="x-italic">x</span>.</p>
+    <p class="tagline">Find your <span class="x-italic">x</span></p>
   </main>
 
   <!-- Floating glowing circle -->
