--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
       --grid: rgba(255,255,255,0.045);
       --cell: 60px;
 
-      /* Type scale */
       --logo-size: clamp(58px, 8.1vw, 144px);
       --tagline-size: clamp(12px, 1.4vw, 22px);
 
       /* Orbit settings */
-      --orbit-dur: 12s;                 /* speed of the circle path */
-      --orbit-radius: 1.8em;            /* distance from logo center */
-      --orb-size: clamp(16px, 2.1vw, 30px); /* big, bright orb */
+      --orbit-dur: 12s;
+      --orbit-radius: 2.5em;
+      --orb-size: clamp(18px, 2.4vw, 34px);
     }
 
     html, body { height: 100%; }
@@ -38,27 +37,22 @@
       position: relative;
       overflow: hidden;
 
-      /* Uniform faint grid */
+      /* Faint grid only */
       background-image:
         linear-gradient(to right, var(--grid) 1px, transparent 1px),
         linear-gradient(to bottom, var(--grid) 1px, transparent 1px);
       background-size: var(--cell) var(--cell), var(--cell) var(--cell);
-      background-position: 0 0, 0 0;
-
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
 
-    /* Gentle vignette for focus */
+    /* Gentle vignette only (no sheen, background stays solid) */
     body::after{
       content:"";
       position: absolute; inset: 0; pointer-events: none;
       background: radial-gradient(120% 120% at 50% 45%,
         rgba(0,0,0,0) 55%,
-        rgba(0,0,0,0.10) 100%);
+        rgba(0,0,0,0.08) 100%);
     }
 
-    /* Topline (0.7 opacity) */
     .topline {
       position: absolute;
       top: 50px;
@@ -75,7 +69,6 @@
 
     main { transform: translateY(-2vh); z-index: 2; }
 
-    /* Wrapper so the orb can orbit the logo’s center */
     .logo-wrap{
       position: relative;
       display: inline-block;
@@ -89,18 +82,16 @@
       line-height: 1.05;
       text-shadow: 0 2px 6px rgba(0,0,0,0.25);
       position: relative;
-      z-index: 2; /* above the orb */
+      z-index: 2;
     }
 
-    /* Big “x” – pulse synced with orbit duration */
     .x-italic{
       font-style: italic;
       display: inline-block;
-      will-change: transform, text-shadow, filter;
       animation: xPulse var(--orbit-dur) ease-in-out infinite;
     }
 
-    /* Bright orbiting dot */
+    /* Orbiting orb ABOVE the text */
     .orb{
       position: absolute;
       top: 50%; left: 50%;
@@ -109,14 +100,12 @@
       border-radius: 50%;
       background: rgba(255,255,255,0.92);
       box-shadow:
-        0 0 18px rgba(255,255,255,0.75),
-        0 0 42px rgba(255,255,255,0.45);
+        0 0 24px rgba(255,255,255,0.85),
+        0 0 54px rgba(255,255,255,0.55);
       pointer-events: none;
-      z-index: 1; /* behind text */
+      z-index: 5; /* now above the text */
       mix-blend-mode: screen;
 
-      /* Orbit: rotate around center then translate out by radius */
-      transform-origin: center;
       animation: orbit var(--orbit-dur) linear infinite, orbPulse var(--orbit-dur) ease-in-out infinite;
     }
 
@@ -127,7 +116,6 @@
       text-shadow: 0 2px 5px rgba(0,0,0,0.20);
     }
 
-    /* Bottom text (0.7 opacity) */
     .copyright{
       position: absolute;
       bottom: 50px;
@@ -148,61 +136,50 @@
       100% { transform: rotate(360deg) translateX(var(--orbit-radius)) rotate(-360deg); }
     }
 
-    /* Synchronized pulse for the big “x” */
     @keyframes xPulse{
       0%, 100% {
-        transform: translateY(0) scale(1);
+        transform: scale(1);
         text-shadow: 0 2px 6px rgba(0,0,0,0.22);
-        filter: drop-shadow(0 0 0 rgba(255,255,255,0));
       }
       50% {
-        transform: translateY(-0.6%) scale(1.03);
+        transform: scale(1.03);
         text-shadow: 0 3px 10px rgba(0,0,0,0.28);
-        filter: drop-shadow(0 0 8px rgba(255,255,255,0.16));
       }
     }
 
-    /* Pulse brightness of the orb (in sync with xPulse) */
     @keyframes orbPulse{
       0%, 100% {
         box-shadow:
-          0 0 16px rgba(255,255,255,0.70),
-          0 0 36px rgba(255,255,255,0.40);
-        opacity: 0.88;
+          0 0 22px rgba(255,255,255,0.8),
+          0 0 50px rgba(255,255,255,0.45);
       }
       50% {
         box-shadow:
-          0 0 26px rgba(255,255,255,0.95),
-          0 0 56px rgba(255,255,255,0.55);
-        opacity: 1;
+          0 0 34px rgba(255,255,255,0.95),
+          0 0 72px rgba(255,255,255,0.6);
       }
     }
 
-    /* Respect reduced motion */
     @media (prefers-reduced-motion: reduce){
-      .x-italic { animation: none; }
-      .orb { animation: none; display: none; }
+      .x-italic, .orb { animation: none; }
     }
   </style>
 </head>
 <body>
-  <!-- Topline -->
   <div class="topline">
     The UK Maths Tutor, Supporting learners from KS1 to KS3.
   </div>
 
   <main>
     <div class="logo-wrap">
-      <!-- Bright orbiting dot -->
+      <!-- Bright orbiting orb -->
       <div class="orb" aria-hidden="true"></div>
 
       <h1 class="logo"><span class="x-italic">x</span>tutor</h1>
     </div>
-
     <p class="tagline">Learning begins with <span class="x-italic">x</span>.</p>
   </main>
 
-  <!-- Bottom text -->
   <div class="copyright">© xtutor.ai , 2025</div>
 </body>
 </html>
